Bug 129211 - Skia: Lines on canvas when you move shape over another shape, or scroll canvas
Summary: Skia: Lines on canvas when you move shape over another shape, or scroll canvas
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords:
: 129120 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2019-12-05 19:07 UTC by Roman Kuznetsov
Modified: 2019-12-15 18:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (28.35 KB, image/png)
2019-12-05 19:08 UTC, Roman Kuznetsov
Details
ODG file (13.50 KB, application/vnd.oasis.opendocument.graphics)
2019-12-05 19:08 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-12-05 19:07:12 UTC
Description:
Lines on drawing when you move shape over another shape (see screenshot attach)

Steps to Reproduce:
1. Open ODG from attach
2. Select any number of shapes
3. Move selected shapes using arrow keys on keyboard
4. Result is on screenshot from attach

if you change scale with Ctrl+mouse wheel then the lines will dissapear

Actual Results:
There are unnecessary lines on drawing

Expected Results:
There are no unnecessary lines on drawing


Reproducible: Always


User Profile Reset: No



Additional Info:
Версия: 6.5.0.0.alpha0+ (x64)
ID сборки: 9ab43aebad67383057d2cc3f754ce2193fa78b4e
Потоков ЦП: 4; ОС:Windows 10.0 Build 17763; Отрисовка ИП: Skia/Vulkan; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded
Comment 1 Roman Kuznetsov 2019-12-05 19:08:03 UTC
Created attachment 156334 [details]
screenshot
Comment 2 Roman Kuznetsov 2019-12-05 19:08:17 UTC
Created attachment 156335 [details]
ODG file
Comment 3 V Stuart Foote 2019-12-05 20:33:38 UTC
Confirmed Windows 10 Ent 64-bit en-US with nVidia Quadro K2000 (26.21.14.4128) and
Version: 6.5.0.0.alpha0+ (x64)
Build ID: 9ab43aebad67383057d2cc3f754ce2193fa78b4e
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

Similar effect as in bug 129120 with frames 'off-by-one' when scrolling, likely same cause.

When shape is moved, it trails a 1px line from its bottom & right edge.
Comment 4 Luboš Luňák 2019-12-12 15:41:29 UTC
*** Bug 129120 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2019-12-13 13:14:48 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe8ca52b1265e5da0e1ef645f364296cf9ee8b12

fix off-by-one with rectangle->polygon Skia clipping (tdf#129211)

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Roman Kuznetsov 2019-12-15 18:04:08 UTC
verified in

Версия: 6.5.0.0.alpha0+ (x64)
ID сборки: e26d89371f0e4f41476c9a99be01d98dedb76776
Потоков ЦП: 4; ОС:Windows 10.0 Build 17763; Отрисовка ИП: Skia/Vulkan; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded

thanks for fixing!