fix off-by-one with rectangle->polygon Skia clipping (tdf#129211)

This appears to be yet another case of
https://lists.freedesktop.org/archives/libreoffice/2019-November/083709.html,
where converting rectangles to polygons for areas has unexpected results
for the right and bottom edge pixels.

Change-Id: I819f3eb1a739ac8fd18d792b7031b82fe52e4b4c